src/frontendProxy/envoy.tmpl.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: ${ENVOY_PORT}
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: frontend
                      domains:
                        - "*"
                      routes:
                        - match: { prefix: "/feature" }
                          route: { cluster: featureflag, prefix_rewrite: "/" }
                        - match: { prefix: "/loadgen" }
                          route: { cluster: loadgen, prefix_rewrite: "/" }
                        - match: { prefix: "/grafana" }
                          route: { cluster: grafana }
                        - match: { prefix: "/" }
                          route: { cluster: frontend }
                      response_headers_to_add:
                        - header:
                            key: "Set-Cookie"
                            value: "otelCollectorUrl=${PUBLIC_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT};"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: frontend
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: frontend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${FRONTEND_HOST}
                      port_value: ${FRONTEND_PORT}
    - name: featureflag
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: featureflag
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${FEATURE_FLAG_SERVICE_HOST}
                      port_value: ${FEATURE_FLAG_SERVICE_PORT}
    - name: loadgen
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: loadgen
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${LOCUST_WEB_HOST}
                      port_value: ${LOCUST_WEB_PORT}
    - name: grafana
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: grafana
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${GRAFANA_SERVICE_HOST}
                      port_value: ${GRAFANA_SERVICE_PORT}

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10000
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
